fixing navbar mobile on safari 4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,14 +337,14 @@ h6 {
 
 .navbar-mobile {
   position: fixed;
-  overflow: visible;
+  overflow: hidden;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.9);
   transition: 0.3s;
-  z-index: 999;
+  z-index: 999 !important;
   margin-top: 0;
 }
 
